[project]
name = "aplib"
version = "0.6"
authors = [
  { name="Sandor Nemes" },
]
description = "Module for decompressing aPLib compressed data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=2.7"
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/snemes/aplib"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
